[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/UI/debug UI/debug value display.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/debug UI/FPS Counter.gd" type="Script" id=2]
[ext_resource path="res://scenes/UI/debug UI/current state display/current state display.gd" type="Script" id=3]
[ext_resource path="res://scenes/UI/debug UI/physics values display/physics_value_titles.gd" type="Script" id=4]
[ext_resource path="res://scenes/UI/debug UI/current state display/Current State Titles.gd" type="Script" id=5]
[ext_resource path="res://scenes/UI/debug UI/targets display/targets_label.gd" type="Script" id=6]
[ext_resource path="res://scenes/UI/debug UI/physics values display/physics_value_display.gd" type="Script" id=7]
[ext_resource path="res://scenes/UI/debug UI/targets display/targets_display.gd" type="Script" id=8]
[ext_resource path="res://scenes/UI/debug UI/targets display/focus_target_label.gd" type="Script" id=9]
[ext_resource path="res://Fonts/Calamity Bold.tres" type="DynamicFont" id=10]
[ext_resource path="res://scenes/UI/debug UI/targets display/focus_target_name.gd" type="Script" id=11]
[ext_resource path="res://scenes/UI/debug UI/player state display/state_stack_label.gd" type="Script" id=12]
[ext_resource path="res://scenes/UI/debug UI/player state display/state_stack_names.gd" type="Script" id=13]
[ext_resource path="res://scenes/UI/debug UI/flags display/bool_values.gd" type="Script" id=14]
[ext_resource path="res://scenes/UI/debug UI/flags display/bool_labels.gd" type="Script" id=15]

[node name="Debug Value Display" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS Counter" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -87.9999
margin_top = 16.0
margin_right = -47.9999
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS Counter" type="Label" parent="FPS Counter"]
margin_right = 40.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 10 )
align = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_top = 176.0
margin_right = 40.0
margin_bottom = 216.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player State Display" type="HBoxContainer" parent="Control"]
margin_left = 48.0
margin_right = 88.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State Labels" type="VBoxContainer" parent="Control/Player State Display"]
margin_bottom = 38.0

[node name="Current State Label" type="Label" parent="Control/Player State Display/State Labels"]
margin_bottom = 17.0
custom_fonts/font = ExtResource( 10 )
align = 2
script = ExtResource( 5 )

[node name="State Stack Label" type="Label" parent="Control/Player State Display/State Labels"]
margin_top = 21.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
align = 2
script = ExtResource( 12 )

[node name="States" type="VBoxContainer" parent="Control/Player State Display"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 38.0

[node name="Current State Name" type="Label" parent="Control/Player State Display/States"]
margin_bottom = 17.0
custom_fonts/font = ExtResource( 10 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="States Stack" type="Label" parent="Control/Player State Display/States"]
margin_top = 21.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
script = ExtResource( 13 )

[node name="Bools Display" type="HBoxContainer" parent="Control"]
margin_left = 100.0
margin_top = 96.0
margin_right = 140.0
margin_bottom = 113.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bool Labels" type="VBoxContainer" parent="Control/Bools Display"]
margin_bottom = 17.0

[node name="Bool Labels" type="Label" parent="Control/Bools Display/Bool Labels"]
margin_bottom = 17.0
custom_fonts/font = ExtResource( 10 )
align = 2
script = ExtResource( 15 )

[node name="Bool Values" type="VBoxContainer" parent="Control/Bools Display"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 17.0

[node name="Bool Values" type="Label" parent="Control/Bools Display/Bool Values"]
margin_bottom = 17.0
custom_fonts/font = ExtResource( 10 )
script = ExtResource( 14 )

[node name="Physics Values Display" type="HBoxContainer" parent="Control"]
margin_left = 16.0
margin_top = 128.0
margin_right = 56.0
margin_bottom = 145.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Physics Value Titles" type="Label" parent="Control/Physics Values Display"]
margin_bottom = 17.0
custom_fonts/font = ExtResource( 10 )
align = 2
script = ExtResource( 4 )

[node name="Physics Values" type="Label" parent="Control/Physics Values Display"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 10 )
script = ExtResource( 7 )

[node name="Targets Display" type="HBoxContainer" parent="Control"]
margin_left = 48.0
margin_top = 224.0
margin_right = 88.0
margin_bottom = 262.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Target Labels" type="VBoxContainer" parent="Control/Targets Display"]
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Focus Target Label" type="Label" parent="Control/Targets Display/Target Labels"]
margin_bottom = 17.0
custom_fonts/font = ExtResource( 10 )
align = 2
script = ExtResource( 9 )

[node name="Targets Label" type="Label" parent="Control/Targets Display/Target Labels"]
margin_top = 21.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
align = 2
script = ExtResource( 6 )

[node name="Target Names" type="VBoxContainer" parent="Control/Targets Display"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 38.0

[node name="Focus Target Name" type="Label" parent="Control/Targets Display/Target Names"]
margin_bottom = 17.0
custom_fonts/font = ExtResource( 10 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Targets Names" type="Label" parent="Control/Targets Display/Target Names"]
margin_top = 21.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 10 )
script = ExtResource( 8 )
[connection signal="focus_target" from="." to="Control/Targets Display/Target Names/Focus Target Name" method="_on_Debug_Value_Display_focus_target"]
[connection signal="is_falling" from="." to="Control/Bools Display/Bool Values/Bool Values" method="_on_Debug_Value_Display_is_falling"]
[connection signal="position_changed" from="." to="Control/Physics Values Display/Physics Values" method="_on_Debug_Value_Display_position_changed"]
[connection signal="state_changed" from="." to="Control/Player State Display/States/Current State Name" method="_on_Debug_Value_Display_state_changed"]
[connection signal="state_stack_changed" from="." to="Control/Player State Display/States/States Stack" method="_on_Debug_Value_Display_state_stack_changed"]
[connection signal="targets_changed" from="." to="Control/Targets Display/Target Names/Targets Names" method="_on_Debug_Value_Display_targets_changed"]
[connection signal="velocity_changed" from="." to="Control/Physics Values Display/Physics Values" method="_on_Debug_Value_Display_velocity_changed"]
